# src/models/create-webhook-endpoint-request.ts
@@ -1,0 +1,42 @@
+/*
+ * Code generated by Speakeasy (https://speakeasy.com). DO NOT EDIT.
+ */
+
+import * as z from "zod/v4-mini";
+import {
+  WebhookEventType,
+  WebhookEventType$outboundSchema,
+} from "./webhook-event-type.js";
+
+export type CreateWebhookEndpointRequest = {
+  /**
+   * The HTTPS URL to POST webhook events to.
+   */
+  url: string;
+  eventTypes: Array<WebhookEventType>;
+};
+
+/** @internal */
+export type CreateWebhookEndpointRequest$Outbound = {
+  url: string;
+  eventTypes: Array<string>;
+};
+
+/** @internal */
+export const CreateWebhookEndpointRequest$outboundSchema: z.ZodMiniType<
+  CreateWebhookEndpointRequest$Outbound,
+  CreateWebhookEndpointRequest
+> = z.object({
+  url: z.string(),
+  eventTypes: z.array(WebhookEventType$outboundSchema),
+});
+
+export function createWebhookEndpointRequestToJSON(
+  createWebhookEndpointRequest: CreateWebhookEndpointRequest,
+): string {
+  return JSON.stringify(
+    CreateWebhookEndpointRequest$outboundSchema.parse(
+      createWebhookEndpointRequest,
+    ),
+  );
+}
