# src/models/index.ts
@@ -8,6 +8,7 @@ export * from "./create-o-auth-authorization-response.js";
 export * from "./create-post-error-code.js";
 export * from "./create-post-request.js";
 export * from "./create-upload-session-request.js";
+export * from "./create-webhook-endpoint-request.js";
 export * from "./delete-post-error-code.js";
 export * from "./delivery-status.js";
 export * from "./draft-post-schedule.js";
@@ -39,11 +40,11 @@ export * from "./project.js";
 export * from "./publish-now-post-schedule.js";
 export * from "./schedule-for-later-post-schedule.js";
 export * from "./security.js";
+export * from "./social-account-input.js";
 export * from "./social-account-platform-inputs.js";
 export * from "./social-account-platform-specific-inputs.js";
 export * from "./social-account-post.js";
 export * from "./social-account-status.js";
-export * from "./social-account-target-input.js";
 export * from "./social-account.js";
 export * from "./social-platform.js";
 export * from "./tik-tok-input.js";
@@ -60,6 +61,8 @@ export * from "./upload-session-status.js";
 export * from "./upload-session-uploaded-status.js";
 export * from "./upload-session.js";
 export * from "./validation-error.js";
+export * from "./webhook-endpoint.js";
+export * from "./webhook-event-type.js";
 export * from "./x-input.js";
 export * from "./x-post.js";
 export * from "./you-tube-input.js";
