# src/models/operations/delete-webhook-endpoint.ts
@@ -1,0 +1,32 @@
+/*
+ * Code generated by Speakeasy (https://speakeasy.com). DO NOT EDIT.
+ */
+
+import * as z from "zod/v4-mini";
+
+export type DeleteWebhookEndpointRequest = {
+  webhookId: string;
+};
+
+/** @internal */
+export type DeleteWebhookEndpointRequest$Outbound = {
+  webhookId: string;
+};
+
+/** @internal */
+export const DeleteWebhookEndpointRequest$outboundSchema: z.ZodMiniType<
+  DeleteWebhookEndpointRequest$Outbound,
+  DeleteWebhookEndpointRequest
+> = z.object({
+  webhookId: z.string(),
+});
+
+export function deleteWebhookEndpointRequestToJSON(
+  deleteWebhookEndpointRequest: DeleteWebhookEndpointRequest,
+): string {
+  return JSON.stringify(
+    DeleteWebhookEndpointRequest$outboundSchema.parse(
+      deleteWebhookEndpointRequest,
+    ),
+  );
+}
