# src/models/webhook-event-type.ts
@@ -1,0 +1,24 @@
+/*
+ * Code generated by Speakeasy (https://speakeasy.com). DO NOT EDIT.
+ */
+
+import * as z from "zod/v4-mini";
+import * as openEnums from "../types/enums.js";
+import { OpenEnum } from "../types/enums.js";
+
+export const WebhookEventType = {
+  SocialAccountPostDeliverySucceeded: "socialAccountPost.delivery.succeeded",
+  SocialAccountPostDeliveryFailed: "socialAccountPost.delivery.failed",
+} as const;
+export type WebhookEventType = OpenEnum<typeof WebhookEventType>;
+
+/** @internal */
+export const WebhookEventType$inboundSchema: z.ZodMiniType<
+  WebhookEventType,
+  unknown
+> = openEnums.inboundSchema(WebhookEventType);
+/** @internal */
+export const WebhookEventType$outboundSchema: z.ZodMiniType<
+  string,
+  WebhookEventType
+> = openEnums.outboundSchema(WebhookEventType);
